refactor(tree): harden query policy boundaries